[package]
name = "solana-key-generator"
version = "1.0.0"
edition = "2024"
authors = ["Patrik Duch <duchpatrik@icloud.com>"]
description = "A Rust-based tool for securely generating Solana wallet keypairs (public and private keys)."
license = "GPL-3.0"
repository = "https://github.com/patrikduch/solana-key-generator"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"

# solana
solana-sdk = "1.18.0"