[package]
name = "solana-key-generator"
version = "1.0.0"
edition = "2024"
authors = ["Patrik Duch <duchpatrik@icloud.com>"]
description = "A Rust-based tool for securely generating Solana wallet keypairs (public and private keys)."
license = "GPL-3.0"
repository = "https://github.com/patrikduch/solana-key-generator"

[dependencies]
solana-sdk = "1.18.0"
bip39 = "2.0.0" # Aligned with code requirements
rand = "0.8.5"
tokio = { version = "1.0", features = ["full"] }
bs58 = "0.5.0"